fix: Now there will be a response if the url is invalid chore: Updated to java 17 some code